# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml
.github/workflows/: ci.yaml
config/: config.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: config.rs  domain.rs  lib.rs  mail.rs  main.rs  startup.rs  telemetry.rs
src/config/: application.rs  database.rs  environment.rs  mail.rs
src/domain/: subscriber.rs
src/domain/subscriber/: email.rs  name.rs
src/routes/: subscriptions.rs
tests/: health.rs
tests/api/: health.rs  helpers.rs  subscriptions.rs
