[package]
name = "zero2prod"
authors = ["eth0net <eth0net@pm.me>"]
version = "0.1.0"
edition = "2021"

[features]
mail = ["reqwest/json", "reqwest/rustls-tls"]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13"
reqwest = "0.11.24"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.16"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
]
